--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,400;1,700&display=swap');
 * {
   margin: 0;
   padding: 0;
   outline: 0;
   box-sizing: border-box;
+  border-radius: 30px;
+  font-family: 'Josefin Sans', sans-serif;
+  
+}
+body,html{
+        background: rgb(38,82,254);
+background: linear-gradient(100deg, rgba(38,82,254,1) 0%, rgba(0,217,230,1) 100%);
 }
 
 input{
         cursor: pointer;
-        margin: 50px;
+        margin-bottom: 50px;
+        margin-top: 50px;
         margin-right: 0;
         padding: 20px;
         font-size: 20px;
@@ -26,4 +35,54 @@ p{
 
 .pQuestao7{
         margin: 10px;
+}
+
+.box{
+        height: 200px;
+        width: 200px;
+        border: 1px solid black;
+        font-weight: bold;
+        color: rgb(0, 0, 0);
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+}
+
+.conteiner{
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+}
+
+.btnNome{
+        padding: 20px;
+        text-align: center;
+        border-radius: 15px;
+}
+
+
+h1{
+        text-align: center;
+}
+
+
+.tudo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+.pQuestao7{
+        width: 50%;
+        text-align: center;
+}
+
+.btn{
+        margin-top: 5px;
+}
+.inp{
+        margin-bottom: 0;
 }
